tests/NormalTests/paczka1/fuzzy1/14598605.err
Error in line 19: A588 A627 57,84
Error in line 23: A588 A588 48,97
